# art_skills

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Example.ipynb  README.md  SL_Example.ipynb  art_skills.i  artskills.code-workspace  workspace.code-workspace
cpp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  SigmaLogNormal.h  SigmaLogNormalFactor.h  SlnParameters.h  SparseSlnFactor.h  chebyshev_alphabet_test  chebyshev_alphabet_test.cpp  cmake_install.cmake  jd00_chebyshevAlphabet.cpp
cpp/SLM/: CMakeLists.txt  SigmaLogNormal.h  SlnParameters.h  SlnStroke.h  SlnStrokeExpression.h  SlnStrokeExpression2.h  SparseSlnFactor copy.h  SparseSlnFactor.h  SparseSlnFactorExpression.h  SparseSumSlnFactors.h  expressions.h  interpolate.h  jd00_sigmalognormal_2strokes.cpp  utils.h
cpp/SLM/examples/: CMakeLists.txt  GenerateSln.cpp  jd00_sigmalognormal_2strokes.cpp
cpp/SLM/tests/: A.csv  CMakeCache.txt  stroke1.csv  test3strokes.cpp  testExpressions.cpp  testSigmaLogNormal.cpp  testSlnExpressionFactor.cpp  testSlnExpressionFactor_1.cpp  testSlnExpressionFactor_2.cpp  testSlnExpressionFactor_3.cpp  testSlnExpressionFactor_D1.cpp  testSlnExpressionFactor_D2.cpp  testSlnExpressionFactor_D3.cpp  testSlnExpressionFactor_Multi.cpp  testSlnExpressionFactor_Single.cpp  testSlnParameters.cpp  testSlnStroke.cpp  testSlnStrokeExpression.cpp  testSlnStrokeExpression2.cpp  testSparseSlnFactor.cpp  testSparseSlnFactor_Multi.cpp  testSparseSumSLNFactor.cpp  testcsv.cpp  testexpressionSLN.cpp  tstSLN.dot
cpp/SLM/tests/defunct/: test3strokes.cpp  testAvoidIndeterminateLinSys.cpp  testSparseSlnFactor_Multi.cpp
cpp/Stroke_Capture/src/: hanning.hpp  ofApp.cpp  ofApp.h
cpp/cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp/tests/: CMakeLists.txt  testSigmaLogNormal.cpp  testSigmaLogNormalFactor.cpp
cpp/wSLM/: SigmaLogNormal.h  SigmaLogNormalFactor.h  SlnParameters.h
cpp/wSLM/tests/: testSigmaLogNormal.cpp
matlab/: vel_processing.asv  vel_processing.m  velocity.txt
python/: SL_vs_wSL.ipynb  Sln_alphabet.ipynb  Sln_setparam.ipynb  __init__.py  artskills.code-workspace  demo.py  example.csv  generate_wSL.ipynb  result.csv  result2.csv  stroke1.csv  stroke1_005_60.csv  stroke2.csv  stroke3.csv  temp_crt.py
whiteboard/: README.md  gerry05_toppra.ipynb  (+6 more)
(+85 files in other folders)
